[package]
name = "savaged-server"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# yew = { version = "0.20", features = ["ssr"] }
# this is the development version of Yew
yew = { git = "https://github.com/yewstack/yew/", features = ["ssr"] }
# yew-router = "0.17"
# yew-router = { git = "https://github.com/yewstack/yew.git" }


# anyhow = "1.0"
actix-web="^4"
actix-files="^0.6"
actix-cors = "^0.6.4"
actix-web-actors = "^4.1.0"
actix = "^0.13.0"
uuid = { version = "^0.8", features = ["v4", "serde"]}
serde = { version = "^1", features = ["derive"]}
env_logger = "0.8"
log = "^0.4"
dotenv = "0.15.0"
mysql = { version = "23.0.0"}
serde_json = "1.0.87"
savaged-front-end = { path="../front-end" }
chrono = { version = "0.4.22", features = ["serde"] }
tokio = { version = "1.17.0", features = ["full"] }
# yew = { version = "0.20", features = ["ssr"] }
#  clap = { version = "3.1.7", features = ["derive"] }
sha2 = "^0.10.6"
savaged-libs = { path="../savaged-libs" }
base64 = "^0.13.1"
# futures = "^0.1.22"
lettre = "0.10"
voca_rs = "1.15.2"
actix-easy-multipart = "3.0.0"
image = "0.24.5"
webp = "0.2.2"
actix-session = { version="0.7.2", features = ["cookie-session"]}
mysql_async = "0.32.2"
